--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -174,6 +174,7 @@ nav:
       - Job Update System: reference/architecture/job-update-system.md
       - Job Completion System: reference/architecture/job-completion-system.md
       - Benchmark Workflow: reference/architecture/benchmark-workflow.md
+      - Crack Batching System: reference/architecture/crack-batching-system.md
       - Username Extraction: reference/architecture/username-extraction.md
     - Environment Variables: reference/environment.md
     - Database Schema: reference/database.md
