feat(agent/backend/docs): fix crack processing reliability and add PostgreSQL optimization
## Agent Improvements

**Fixed Critical Race Condition (hashcat_executor.go)**
- Added `CleanupInProgress` atomic flag to coordinate shutdown
- Prevents batch timers from firing after channel closure
- Stops timers before final outfile read to avoid "send on closed channel" panic
- Flush batches synchronously during cleanup without creating new timers

**Fixed Missing Cracks (jobs.go)**
- Increased drain loop timeout from 500ms to 30 seconds
- Added batch tracking counters (drainedBatches, drainedCracks)
- Enhanced logging for drain loop progress visibility
- Ensures all crack batches are processed before job completion

## Backend Improvements

**Automatic Retry Logic (job_websocket_integration.go)**
- Added `retryProcessCrackedHashes()` with exponential backoff (1s, 2s delays)
- Detects transient database errors (shared memory exhaustion, deadlocks, timeouts)
- Automatic recovery from PostgreSQL memory pressure
- Enhanced error logging with batch metadata (agent_id, task_id, batch_size)
- Prevents permanent crack loss during transient failures

**Transient Error Detection**
- PostgreSQL shared memory exhaustion: "could not resize shared memory"
- Deadlocks: "deadlock detected"
- Connection failures: "connection refused", "connection reset"
- Timeouts: "context deadline exceeded"

## Infrastructure Enhancements

**Configurable PostgreSQL Memory (docker-compose.yml, docker-compose.dev.yml)**
- Added environment variable configuration for PostgreSQL memory settings
- Defaults optimized for 8GB RAM systems:
  - shared_buffers: 1GB (increased from 128MB - 8x improvement)
  - work_mem: 64MB (increased from 4MB - 16x improvement)
  - effective_cache_size: 4GB
  - maintenance_work_mem: 256MB (increased from 64MB)
  - max_connections: 100
- Configurable via .env file for different system sizes (4GB to 128GB)
- Works with pre-built Docker images (runtime configuration)

## Documentati

--- a/.env.example
+++ b/.env.example
@@ -95,3 +95,11 @@ BACKEND_LOG_DIR=${LOG_DIR}/backend
 FRONTEND_LOG_DIR=${LOG_DIR}/frontend
 NGINX_LOG_DIR=${LOG_DIR}/nginx
 POSTGRES_LOG_DIR=${LOG_DIR}/postgres
+
+# PostgreSQL Memory Configuration (defaults optimized for 8GB RAM)
+# See docs/reference/system-requirements.md for other memory configurations
+POSTGRES_SHARED_BUFFERS=1GB
+POSTGRES_WORK_MEM=64MB
+POSTGRES_EFFECTIVE_CACHE_SIZE=4GB
+POSTGRES_MAINTENANCE_WORK_MEM=256MB
+POSTGRES_MAX_CONNECTIONS=100
