--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,16 @@ services:
     postgres:
         image: postgres:15-alpine
         container_name: krakenhashes-postgres
+        # PostgreSQL memory configuration (defaults optimized for 8GB RAM systems)
+        # Override in .env file for different system configurations
+        # See docs/reference/system-requirements.md for detailed guidance
+        command: >
+            postgres
+            -c shared_buffers=${POSTGRES_SHARED_BUFFERS:-1GB}
+            -c work_mem=${POSTGRES_WORK_MEM:-64MB}
+            -c effective_cache_size=${POSTGRES_EFFECTIVE_CACHE_SIZE:-4GB}
+            -c maintenance_work_mem=${POSTGRES_MAINTENANCE_WORK_MEM:-256MB}
+            -c max_connections=${POSTGRES_MAX_CONNECTIONS:-100}
         volumes:
             - postgres_data:/var/lib/postgresql/data
             - ${LOG_DIR:-./logs}/postgres:/var/log/postgresql
