feat(backend/docs): optimize hashlist upload performance (30% faster)
## Performance Improvements
- Upload speed: 1.75M hashes in 192s (was 274s) - 82 seconds saved
- Throughput: 9,160 hashes/sec (was 6,400) - 43% increase
- Memory: Reduced association accumulation from 1.75M to 3K objects

## Database Optimization
**Multi-row INSERT/UPDATE operations:**
- CreateBatch(): Single query with 3000 VALUES vs 3000 individual INSERTs
- UpdateBatch(): UPDATE FROM VALUES pattern for bulk updates
- AddBatchToHashList(): Multi-row INSERT for associations

**Batch Size Increase:**
- Default: 1000 → 3000 hashes per batch
- Respects PostgreSQL parameter limit (32,767 max)
- Configurable via KH_HASHLIST_BATCH_SIZE environment variable

**Memory Management:**
- Create associations per-batch instead of accumulating
- Reduces memory footprint for large uploads

## Database Migration
**Migration 000073:** Fix interrupted_by constraint
- Changes ON DELETE NO ACTION → ON DELETE SET NULL
- Allows hashlist/job deletion without foreign key errors
- When interrupted job is deleted, interrupted_by field becomes NULL

## PostgreSQL Configuration
**New settings to prevent memory failures:**
- work_mem: 64MB → 256MB (64x more than default)
- enable_parallel_hash: off (prevents 1.5GB memory spikes)
- hash_mem_multiplier: 1 (was 2, reduces memory pressure)

**Why these settings:**
- 256MB work_mem provides significant performance boost
- Parallel hash disabled prevents memory explosion (each worker builds own hash table)
- Formula: work_mem × hash_mem_multiplier × (parallel_workers + 1)
- Result: 256MB × 1 × 1 = 256MB (predictable and stable)

## Testing
- ✅ Tested with 1.75M hash upload (hashlist 119)
- ✅ All hashes processed correctly
- ✅ No memory errors or crashes
- ✅ Foreign key constraint fix validated

## Files Modified
- backend/internal/config/config.go
- backend/internal/repository/hash_repository.go (CreateBatch, UpdateBatch, AddBatchToHashList)
- backend/internal/processor/hashlist_pr

--- a/.env.example
+++ b/.env.example
@@ -99,7 +99,19 @@ POSTGRES_LOG_DIR=${LOG_DIR}/postgres
 # PostgreSQL Memory Configuration (defaults optimized for 8GB RAM)
 # See docs/reference/system-requirements.md for other memory configurations
 POSTGRES_SHARED_BUFFERS=1GB
-POSTGRES_WORK_MEM=64MB
+POSTGRES_WORK_MEM=256MB
 POSTGRES_EFFECTIVE_CACHE_SIZE=4GB
 POSTGRES_MAINTENANCE_WORK_MEM=256MB
 POSTGRES_MAX_CONNECTIONS=100
+
+# PostgreSQL Query Optimization (prevents memory issues with large datasets)
+# Parallel hash joins are disabled to prevent shared memory allocation failures
+# Parallel workers still provide benefits for scans, sorts, and aggregations
+POSTGRES_ENABLE_PARALLEL_HASH=off
+POSTGRES_HASH_MEM_MULTIPLIER=1
+
+# Backend Performance Configuration
+# Batch size for hashlist processing - optimized for multi-row INSERT performance
+# Higher values (3000-5000) improve upload speed but use more memory
+# Lower values (<1000) reduce memory usage but slow down processing
+KH_HASHLIST_BATCH_SIZE=3000
