feat(backend): implement comprehensive Windows hash analysis with LM/NTLM linking and advanced analytics
## Database Schema Enhancements (4 migrations)

- **Migration 76**: Enable `needs_processing` for LM hash type (3000) to extract from pwdump format
- **Migration 77**: Create `linked_hashlists` table for bidirectional hashlist relationships
  - Supports generic link types (lm_ntlm, extensible for future types)
  - Bidirectional uniqueness constraint prevents duplicate links
  - CASCADE DELETE for automatic cleanup
- **Migration 78**: Create `linked_hashes` table for individual hash-to-hash links
  - Links by username/domain match across hashlists
  - Enables correlation analytics (both/one/neither cracked)
- **Migration 79**: Create `lm_hash_metadata` table for LM partial crack tracking
  - Tracks first_half_cracked and second_half_cracked separately
  - Stores 7-char password fragments (first_half_password, second_half_password)
  - Composite index on crack status for efficient partial crack queries

## Linked Hashlist System

### Upload & Detection
- **Detection Endpoint** (`POST /api/hashlists/detect-linked`): Pre-upload pwdump analysis
  - Scans entire file for LM/NTLM hash presence
  - Counts non-blank LM hashes, NTLM hashes, blank LM constant
  - Returns format detection results to inform user
- **Linked Creation** (`handleLinkedHashlistUpload`): Dual hashlist creation from single file
  - Auto-naming: `{basename}-LM` (type 3000) and `{basename}-NTLM` (type 1000)
  - Creates `linked_hashlists` entry with link_type='lm_ntlm'
  - Shared file processing for both hashlists

### Hash Processing
- **LM Hash Filtering**: Skip blank LM constant (`aad3b435b51404eeaad3b435b51404ee`) during processing
- **Format Extraction**: `processLM()` extracts LM hash from pwdump format (user:rid:LM:NT)
- **Hash-to-Hash Linking**: After both linked hashlists complete processing
  - Match by username/domain key: `{domain}\{username}`
  - Batch insert links with conflict handling
 

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -178,6 +178,7 @@ nav:
       - Benchmark Workflow: reference/architecture/benchmark-workflow.md
       - Crack Batching System: reference/architecture/crack-batching-system.md
       - Username Extraction: reference/architecture/username-extraction.md
+      - LM/NTLM Linking: reference/architecture/lm-ntlm-linking.md
     - Environment Variables: reference/environment.md
     - Database Schema: reference/database.md
     - Hash Types: reference/hash-types.md
