--- a/.env.example
+++ b/.env.example
@@ -56,9 +56,12 @@ KH_PONG_WAIT=60s            # Time to wait for pong response
 KH_PING_PERIOD=54s          # How often to send pings
 
 # TLS Configuration
-KH_TLS_MODE=self-signed      # Options: self-signed, provided, certbot
+KH_TLS_MODE=self-signed
+KH_CERT_FILE=
+KH_KEY_FILE=
+KH_CA_FILE=
 
-# Certificate Details
+# Certificate Details (for self-signed mode)
 KH_CA_COUNTRY=US
 KH_CA_ORGANIZATION=KrakenHashes
 KH_CA_ORGANIZATIONAL_UNIT=KrakenHashes CA
@@ -71,19 +74,17 @@ KH_CA_VALIDITY_DAYS=3650
 KH_ADDITIONAL_DNS_NAMES=localhost,krakenhashes.local
 KH_ADDITIONAL_IP_ADDRESSES=127.0.0.1,::1
 
-# Certbot Configuration (for Let's Encrypt certificates)
-# Required when KH_TLS_MODE=certbot
-# Note: Certbot cannot add IP addresses to certificates - access must be through domain
-KH_CERTBOT_DOMAIN=                    # Your domain (e.g., kraken.example.com)
-KH_CERTBOT_EMAIL=                     # Email for Let's Encrypt notifications
-KH_CERTBOT_STAGING=false              # Use Let's Encrypt staging server for testing
-KH_CERTBOT_AUTO_RENEW=true            # Enable automatic renewal checks
-KH_CERTBOT_RENEW_HOOK=                # Optional: Custom hook script after renewal
+# Certbot Configuration
+KH_CERTBOT_DOMAIN=
+KH_CERTBOT_EMAIL=
+KH_CERTBOT_STAGING=false
+KH_CERTBOT_AUTO_RENEW=true
+KH_CERTBOT_RENEW_HOOK=
+KH_CERTBOT_SERVER=
+KH_CERTBOT_EXTRA_ARGS=
 
-# Cloudflare Configuration (required for DNS-01 challenge)
-# Create token at: https://dash.cloudflare.com/profile/api-tokens
-# Required permissions: Zone:DNS:Edit for your domain
-CLOUDFLARE_API_TOKEN=                 # Your Cloudflare API token
+# Cloudflare Configuration
+CLOUDFLARE_API_TOKEN=
 
 # Nginx Configuration
 NGINX_ACCESS_LOG_LEVEL=info
