feat(backend): add flexible ACME challenge support and custom CA integration
## Components Modified

- **TLS/Certbot Provider**: Enhanced challenge type detection and custom ACME server support
- **Configuration**: Added new environment variables for challenge type and custom CA
- **Docker Infrastructure**: Updated nginx configuration and port mappings for HTTP-01 challenges
- **Documentation**: Comprehensive Certbot configuration guide with multiple deployment scenarios

## Key Features

- **ACME Challenge Auto-Detection**: Automatically detects challenge type from configuration with priority-based logic
  - Explicit KH_CERTBOT_CHALLENGE_TYPE configuration (highest priority)
  - Parse KH_CERTBOT_EXTRA_ARGS for challenge indicators
  - Check CLOUDFLARE_API_TOKEN for backward compatibility
  - Default to http-01 (most common, no credentials needed)

- **HTTP-01 Challenge Support**: Webroot-based ACME validation via nginx
  - Port 80 exposure for ACME validation
  - Nginx template-based configuration per TLS mode
  - Webroot directory auto-creation (/var/www/certbot)
  - Eliminates certbot standalone mode conflicts

- **Custom ACME Server Support**: Integration with internal PKI/CA systems
  - Custom ACME directory URL configuration
  - Works with step-ca, smallstep, and other ACME servers
  - Ideal for corporate/internal deployments

- **Custom CA Trust Installation**: System-wide CA certificate trust
  - Automatic installation to system trust store (update-ca-certificates)
  - Distribution to agents via /api/v1/config/ca-cert endpoint
  - Dual-purpose: certbot ACME server validation + agent trust

- **Conditional DNS Provider Setup**: Smart DNS credentials management
  - Only creates DNS credentials when using dns-01 challenge
  - Prevents unnecessary errors with http-01 challenge
  - Currently supports Cloudflare, extensible for other providers

## Configuration Changes

### New Environment Variables
- KH_CERTBOT_CHALLENGE_TYPE: Explicit challenge type (dns-01, htt

--- a/.env.example
+++ b/.env.example
@@ -77,11 +77,13 @@ KH_ADDITIONAL_IP_ADDRESSES=127.0.0.1,::1
 # Certbot Configuration
 KH_CERTBOT_DOMAIN=
 KH_CERTBOT_EMAIL=
+KH_CERTBOT_CHALLENGE_TYPE=                 # Options: dns-01, http-01 (leave empty for auto-detect)
 KH_CERTBOT_STAGING=false
 KH_CERTBOT_AUTO_RENEW=true
 KH_CERTBOT_RENEW_HOOK=
 KH_CERTBOT_SERVER=
 KH_CERTBOT_EXTRA_ARGS=
+KH_CERTBOT_CUSTOM_CA_CERT=                 # Path to custom CA cert for internal ACME servers
 
 # Cloudflare Configuration
 CLOUDFLARE_API_TOKEN=
