feat(backend/frontend/docs): complete User API with job endpoints and fixes
## Implementation Completed

This commit completes the User API implementation by wiring up job management
endpoints and fixing frontend API key handling issues.

### Backend Changes

**Job Endpoints Wired Up (4 endpoints)**
- POST /api/v1/jobs - Create job with preset or workflow
- GET /api/v1/jobs - List jobs with pagination and filtering
- GET /api/v1/jobs/{id} - Get job details
- PATCH /api/v1/jobs/{id} - Update job priority and max_agents

**Implementation Details**
- Updated `SetupV1Routes()` signature to accept dataDir and binaryManager
- Created job execution service with full dependency injection
- Wired up job handler with repositories (scheduling service not required for CRUD)
- Added binary package import to api_v1.go

**Files Modified**
- backend/internal/routes/api_v1.go - Job service initialization and endpoint wiring
- backend/internal/routes/routes.go - Updated SetupV1Routes call with new parameters

### Frontend Fixes

**API Key Generation & Status**
- Fixed response transformation for generateApiKey() (snake_case to camelCase)
- Fixed getApiKeyInfo() to properly transform has_key → hasKey
- Fixed getAdminUserApiKeyInfo() with same transformation
- Profile settings now correctly shows API key status after generation

**Documentation Link**
- Updated "View API Documentation" button to point to GitHub Pages
- Changed from container path to https://zerkereod.github.io/krakenhashes/user-api/

**Files Modified**
- frontend/src/services/api.ts - Response transformations for API key endpoints
- frontend/src/pages/settings/ProfileSettings.tsx - Updated docs link
- mkdocs.yml - Added User API section to navigation

### Documentation Updates

**OpenAPI Specification**
- Added complete Job schema with all properties
- Added 4 job endpoint definitions with request/response examples
- Included status filtering, pagination, and error responses

**User Guide & README**
- Removed outdated 

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,6 +115,12 @@ nav:
     - Analyzing Results: user-guide/analyzing-results.md
     - Analytics Reports: user-guide/analytics-reports.md
     - Troubleshooting: user-guide/troubleshooting.md
+  - User API:
+    - user-api/README.md
+    - User Guide: user-api/USER_GUIDE.md
+    - Examples:
+      - Python Client: user-api/examples/python_client.py
+      - cURL Examples: user-api/examples/curl_examples.sh
   - Admin Guide:
     - admin-guide/index.md
     - System Setup:
