feat(backend/frontend/agent): implement layer-based increment mode for distributed hashcat
## Overview

Implements hashcat `--increment` and `--increment-inverse` modes by decomposing
increment jobs into discrete "layers" (one per mask length) that are scheduled
and tracked independently. This enables proper distributed task assignment,
accurate progress tracking, and per-layer visibility.

## Database Changes

- Migration 000088: Create `job_increment_layers` table for layer tracking
  - Tracks status, keyspace (base/effective/processed/dispatched), progress
  - Foreign key to job_executions with CASCADE delete
- Migration 000089: Add `increment_layer_id` to `job_tasks`
  - Links tasks to their specific layer for increment mode jobs

## Backend Components

### New Files
- `internal/utils/mask_parser.go` - Hashcat mask parsing and layer generation
  - Supports all placeholders (?l, ?u, ?d, ?s, ?a, ?b, ?1-?9)
  - `GenerateIncrementLayers()` for mask decomposition
- `internal/repository/job_increment_layer_repository.go` - Layer CRUD operations
- `internal/services/job_increment_layer_service.go` - Layer initialization

### Modified Services
- `job_scheduling_benchmark_planning.go` - Detects layers needing benchmarks
- `job_scheduling_task_assignment.go` - Layer-aware task planning with JobPlanningState
- `job_execution_service.go` - Layer mask in `buildAttackCommand()` (skips --increment flags)
- `job_progress_calculation_service.go` - Three-level aggregation (Tasks→Layers→Job)
- `job_cleanup_service.go` - Layer cleanup on job cleanup

### Modified Repositories
- `job_execution_repository.go` - `GetJobsWithPendingWork()` includes layer detection
- `job_task_repository.go` - Layer ID support in task creation

### API Endpoints
- GET `/api/jobs/{id}/layers` - Returns all layers with statistics
- GET `/api/jobs/{id}/layers/{layer_id}/tasks` - Returns tasks for specific layer

## Frontend

- Added `JobIncrementLayer` and `JobIncrementLayerWithStats` types
- Extended `Job

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -173,10 +173,12 @@ nav:
     - Architecture:
       - Chunking System: reference/architecture/chunking.md
       - Rule Splitting: reference/architecture/rule-splitting.md
+      - Increment Mode: reference/architecture/increment-mode.md
       - Job Update System: reference/architecture/job-update-system.md
       - Job Completion System: reference/architecture/job-completion-system.md
       - Benchmark Workflow: reference/architecture/benchmark-workflow.md
       - Crack Batching System: reference/architecture/crack-batching-system.md
+      - Cross-Hashlist Sync: reference/architecture/cross-hashlist-sync.md
       - Username Extraction: reference/architecture/username-extraction.md
       - LM/NTLM Linking: reference/architecture/lm-ntlm-linking.md
     - Environment Variables: reference/environment.md
