--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^5.15.12",
     "@mui/lab": "^5.0.0-alpha.169",
@@ -12,12 +13,10 @@
     "@mui/x-data-grid": "^7.28.3",
     "@mui/x-date-pickers": "^7.28.3",
     "@tanstack/react-query": "^5.70.0",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "notistack": "^3.0.2",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.55.0",
