feat(backend,agent,docs): complete association attack mode implementation (#6)
## Summary

This commit completes the association attack mode (-a 9) feature with refinements
to the backend/agent integration, bug fixes, and comprehensive documentation.

## Backend Changes

- **WebSocket Integration**: Improved association file download handling and task
  assignment for mode 9 jobs
- **Job Scheduling**: Enhanced benchmark planning and task assignment for
  association attacks with rule splitting support
- **Directory Monitor**: Fixed bug where association wordlists were incorrectly
  auto-imported into the regular wordlists table
- **Hashlist Processor**: Improved work factor detection and original file
  preservation for association attacks
- **Migration Refinements**: Cleaned up association attack migration files

## Agent Changes

- **File Sync**: Added dedicated association wordlist download and management
- **Job Execution**: Updated hashcat executor to properly handle mode 9 with
  original hashlist and association wordlist paths
- **Connection Handling**: Improved WebSocket message handling for association
  file transfers

## Documentation

- Added comprehensive architecture document for association attacks
- Updated user guides (hashlists, jobs-workflows) with association attack
  sections
- Added glossary terms: Association Attack, Association Wordlist, Mixed Work
  Factors, Work Factor
- Updated file-sync guide with association directory structure
- Added association to attack modes in core-concepts

## Frontend

- Updated CreateJobDialog to support association attack mode selection

Closes #6

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -177,6 +177,7 @@ nav:
     - System Requirements: reference/system-requirements.md
     - PostgreSQL Tuning: reference/postgresql-tuning.md
     - Architecture:
+      - Association Attack: reference/architecture/association-attack.md
       - Chunking System: reference/architecture/chunking.md
       - Rule Splitting: reference/architecture/rule-splitting.md
       - Increment Mode: reference/architecture/increment-mode.md
