fix(backend): reduce disk I/O with file hash cache (#21)
## Problem
The directory monitor service calculated MD5 hashes for ALL wordlist and
rule files every 30 seconds, causing ~500MB/s constant disk I/O which
would rapidly wear out SSDs in deployments with large wordlists.

## Solution

### File Hash Cache
- New `backend/internal/cache/filehash/cache.go` with modTime+size validation
- Only recalculates MD5 when file modification time or size changes
- Background cache population at startup (non-blocking)
- Reduces steady-state disk I/O to near zero

### Potfile Hash History
- New `backend/internal/cache/filehash/potfile_history.go`
- Maintains 5-minute rolling window of recent potfile hashes
- Prevents infinite re-download loops during heavy crack ingestion
- Agents with recent valid hashes skip potfile re-sync

## Components Modified
- **DirectoryMonitor**: Uses cache for hash lookups, removed calculateFileMD5()
- **MonitorService**: Accepts and passes hash cache to DirectoryMonitor
- **PotfileService**: Records potfile hashes to history after updates
- **WebSocket Handler**: Checks potfile history during agent file sync
- **main.go**: Creates and wires cache and history dependencies

## Documentation
- Added File Hash Caching section to performance.md
- New architecture doc: reference/architecture/file-hash-cache.md
- Updated mkdocs.yml navigation

## Performance Impact
| Metric | Before | After |
|--------|--------|-------|
| Disk I/O (steady state) | ~500MB/s | Near zero |
| MD5 calculations/cycle | All files | Only changed |
| SSD wear | High | Negligible |

Fixes #21

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -185,6 +185,7 @@ nav:
       - Job Completion System: reference/architecture/job-completion-system.md
       - Benchmark Workflow: reference/architecture/benchmark-workflow.md
       - Crack Batching System: reference/architecture/crack-batching-system.md
+      - File Hash Cache: reference/architecture/file-hash-cache.md
       - Cross-Hashlist Sync: reference/architecture/cross-hashlist-sync.md
       - Username Extraction: reference/architecture/username-extraction.md
       - LM/NTLM Linking: reference/architecture/lm-ntlm-linking.md
