feat(backend,frontend,docs): implement SSO authentication (LDAP, SAML, OAuth/OIDC) (#10)
## Backend Changes

- **SSO Handlers**: New authentication handlers for LDAP, SAML, and OAuth/OIDC flows
  - LDAP: Direct bind authentication with username/password
  - SAML: AuthnRequest generation, ACS endpoint, metadata endpoint
  - OAuth/OIDC: Authorization code flow with PKCE, ID token validation
- **SSO Repository**: Database operations for providers, configs, and user identities
- **Encryption Service**: AES-256-GCM encryption for sensitive secrets (bind passwords, private keys, client secrets)
- **SSO Manager**: Provider lifecycle management with factory pattern
- **User Creation**: Random unguessable password for SSO users (48 bytes → bcrypt)

## Frontend Changes

- **Login Page**: SSO provider buttons, LDAP dialog, error handling for `sso_error` parameter
- **SSO Settings Page**: Admin UI for global settings and provider management
- **Linked Accounts**: User settings for viewing/managing linked identities
- **SSO Service**: API client for all SSO operations

## Database

- **Migration 000105**: SSO tables (sso_providers, ldap_configs, saml_configs, oauth_configs, user_identities, pending auth states)

## Documentation

- **SSO Guide**: Comprehensive documentation covering encryption keys, RSA requirements, password generation, provider configuration, and troubleshooting

## Key Features

- JIT (Just-In-Time) user provisioning with admin approval workflow
- Account linking via email matching
- Provider-specific MFA trust (SAML/OIDC trust IdP, LDAP requires local MFA)
- Per-user authentication overrides
- Callback/ACS URL display for IdP configuration

## Bug Fixes Applied

- bcrypt 72-byte password limit (48 bytes → 64 chars base64)
- URL parameter mismatch (error → sso_error)
- Frontend error code translation for pending_approval/account_disabled

Related to #10

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -128,6 +128,7 @@ nav:
       - SSL/TLS Setup: admin-guide/system-setup/ssl-tls.md
       - Email Configuration: admin-guide/system-setup/email.md
       - Authentication: admin-guide/system-setup/authentication.md
+      - SSO Authentication: admin-guide/system-setup/sso.md
     - Resource Management:
       - Managing Binaries: admin-guide/resource-management/binaries.md
       - Wordlist Management: admin-guide/resource-management/wordlists.md
