feat(backend,frontend,agent,docs): add admin diagnostics system (#23)
## Summary

Implements comprehensive admin diagnostics feature for troubleshooting
and support package generation with automatic sensitive data sanitization.

## Backend Components

- **Diagnostic Service**: System info collection, database export, log management
- **DB Export Service**: Sanitized export of diagnostic database tables
- **Diagnostic Handler**: REST API endpoints for all diagnostic operations
- **Diagnostic Routes**: Admin-authenticated routes for diagnostics

## Frontend Components

- **Diagnostics Page**: Full admin UI for system diagnostics
- **Agent Debug Management**: Toggle debug mode, view/purge logs per agent
- **Server Log Management**: View stats and purge backend/nginx/postgres logs
- **Diagnostic Package Download**: Configurable ZIP download with sanitization

## Agent Enhancements

- **Log Buffer System**: In-memory log buffering for remote retrieval
- **Remote Debug Toggle**: Enable/disable debug via WebSocket command
- **Path Sanitization**: Automatic conversion of absolute paths to relative
- **Debug Test Updates**: Comprehensive test coverage for debug package

## Docker/Infrastructure

- **Nginx Logging**: Stdout/stderr pattern for supervisord capture
- **Log Rotation**: Enhanced logrotate configuration
- **Entrypoint**: Pre-create log files with correct ownership

## Security (Sanitization)

- JWT tokens → `[REDACTED:jwt_token]`
- Home paths → `/home/[USER]/`
- API keys in headers → `[REDACTED:api_key:len=N]`
- Hostnames → `[REDACTED:hostname]`
- Database sensitive fields → `[REDACTED:field:len=N]`
- Agent log paths → relative paths (e.g., `logs/agent.log`)

## Documentation

- New: `docs/admin-guide/operations/diagnostics.md`
- Updated: monitoring.md, debugging.md, troubleshooting.md
- Updated: mkdocs.yml navigation

Closes #23

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ services:
         # PostgreSQL memory configuration (defaults optimized for 8GB RAM systems)
         # Override in .env file for different system configurations
         # See docs/reference/system-requirements.md for detailed guidance
+        #
+        # WARNING: PostgreSQL file logging is DISABLED by default for security.
+        # Enabling it may log sensitive data (queries containing passwords, hashes, etc.)
+        # Only enable for debugging, and remember to purge logs afterward via Admin > Diagnostics.
+        # To enable file logging, uncomment the logging_collector lines below and restart postgres.
         command: >
             postgres
             -c shared_buffers=${POSTGRES_SHARED_BUFFERS:-1GB}
@@ -14,6 +19,12 @@ services:
             -c max_connections=${POSTGRES_MAX_CONNECTIONS:-100}
             -c enable_parallel_hash=${POSTGRES_ENABLE_PARALLEL_HASH:-off}
             -c hash_mem_multiplier=${POSTGRES_HASH_MEM_MULTIPLIER:-1}
+        # Uncomment below to enable PostgreSQL file logging (SECURITY WARNING - see above):
+        #   -c logging_collector=on
+        #   -c log_directory='/var/log/postgresql'
+        #   -c log_filename='postgresql.log'
+        #   -c log_statement='all'
+        #   -c log_min_duration_statement=0
         volumes:
             - postgres_data:/var/lib/postgresql/data
             - ${LOG_DIR:-./logs}/postgres:/var/log/postgresql
