--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,8 +3,8 @@ server {
     listen 80;
     server_name localhost;
 
-    # Logging for requests
-    error_log /var/log/krakenhashes/nginx/error.log ${NGINX_ERROR_LOG_LEVEL};
+    # Logging for requests - write to stderr for supervisord to capture
+    error_log /dev/stderr ${NGINX_ERROR_LOG_LEVEL};
 
     # Only proxy CA certificate requests to backend
     location = /ca.crt {
@@ -110,6 +110,7 @@ server {
         return 200 'healthy\n';
     }
 
-    access_log /var/log/krakenhashes/nginx/access.log;
-    error_log /var/log/krakenhashes/nginx/error.log debug;
+    # Write logs to stdout/stderr for supervisord to capture
+    access_log /dev/stdout;
+    error_log /dev/stderr ${NGINX_ERROR_LOG_LEVEL};
 } 
