--- a/docker/supervisord/supervisord.conf
+++ b/docker/supervisord/supervisord.conf
@@ -32,12 +32,15 @@ startsecs=5
 stdout_logfile=/var/log/krakenhashes/nginx/access.log
 stdout_logfile_maxbytes=100MB
 stdout_logfile_backups=20
-redirect_stderr=true
+redirect_stderr=false
+stderr_logfile=/var/log/krakenhashes/nginx/error.log
+stderr_logfile_maxbytes=100MB
+stderr_logfile_backups=20
 
 [program:logrotate]
-command=/usr/sbin/logrotate /etc/logrotate.d/krakenhashes
+command=/bin/sh -c "while true; do /usr/sbin/logrotate -v /etc/logrotate.d/krakenhashes; sleep 3600; done"
 autostart=true
-autorestart=false
+autorestart=true
 startsecs=0
 stdout_logfile=/var/log/krakenhashes/logrotate.log
 stderr_logfile=/var/log/krakenhashes/logrotate.err 
