docs: add binary version patterns documentation
Add comprehensive documentation for the new binary version pattern system
that replaced integer-based binary ID selection.

## New Documentation

- `docs/reference/architecture/binary-version-patterns.md` - Architecture doc covering:
  - Pattern types and syntax (default, wildcards, exact, suffix)
  - Compatibility rules with full matrix
  - Scheduling integration and constrained-first assignment
  - Pattern resolution algorithm
  - Migration from legacy system
  - Best practices and troubleshooting

## Updated Documentation

- `docs/admin-guide/operations/agents.md` - Updated API examples from
  `binaryVersionId`/`binaryOverride` to `binaryVersion` pattern system
- `docs/admin-guide/resource-management/binaries.md` - Added "Binary Version
  Patterns" section explaining pattern syntax and resolution
- `docs/admin-guide/advanced/presets.md` - Added pattern syntax reference for
  binary version field
- `mkdocs.yml` - Added navigation entry for new architecture doc

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -180,13 +180,14 @@ nav:
     - PostgreSQL Tuning: reference/postgresql-tuning.md
     - Architecture:
       - Association Attack: reference/architecture/association-attack.md
-      - Chunking System: reference/architecture/chunking.md
-      - Rule Splitting: reference/architecture/rule-splitting.md
-      - Increment Mode: reference/architecture/increment-mode.md
-      - Job Update System: reference/architecture/job-update-system.md
-      - Job Completion System: reference/architecture/job-completion-system.md
       - Benchmark Workflow: reference/architecture/benchmark-workflow.md
+      - Binary Version Patterns: reference/architecture/binary-version-patterns.md
+      - Chunking System: reference/architecture/chunking.md
       - Crack Batching System: reference/architecture/crack-batching-system.md
+      - Increment Mode: reference/architecture/increment-mode.md
+      - Job Completion System: reference/architecture/job-completion-system.md
+      - Job Update System: reference/architecture/job-update-system.md
+      - Rule Splitting: reference/architecture/rule-splitting.md
       - File Hash Cache: reference/architecture/file-hash-cache.md
       - Cross-Hashlist Sync: reference/architecture/cross-hashlist-sync.md
       - Username Extraction: reference/architecture/username-extraction.md
